--- a/core/infrastructure/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc.csproj
@@ -10,4 +10,23 @@
     <PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.32.0.39516">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\..\Unicorn-project.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\..\Unicorn-project.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	
+	
 </Project>
