--- a/services/Unicorn.GrpcService.SDK/Unicorn.GrpcService.SDK.csproj
+++ b/services/Unicorn.GrpcService.SDK/Unicorn.GrpcService.SDK.csproj
@@ -12,7 +12,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="Google.Protobuf" Version="3.19.1" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
 		<PackageReference Include="Grpc.Tools" Version="2.41.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,9 +22,27 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Protobuf Include="..\Unicorn.GrpcService\Protos\greet.proto">
-	    <Link>Grpc\Protos\greet.proto</Link>
-	  </Protobuf>
+		<Protobuf Include="..\Unicorn.GrpcService\Protos\greet.proto">
+			<Link>Grpc\Protos\greet.proto</Link>
+		</Protobuf>
 	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.32.0.39516">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\Unicorn-project.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\Unicorn-project.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
 
 </Project>
