--- a/core/development/Unicorn.Core.Development.ClientHost/Properties/launchSettings.json
+++ b/core/development/Unicorn.Core.Development.ClientHost/Properties/launchSettings.json
@@ -4,19 +4,19 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62874",
-      "sslPort": 44394
+      "applicationUrl": "http://localhost:1381",
+      "sslPort": 44300
     }
   },
   "profiles": {
-    "Unicorn.Core.Development.ServiceHost": {
+    "Unicorn.Core.Development.ClientHost": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7287;http://localhost:5287",
+      "applicationUrl": "https://localhost:7001;http://localhost:5001",
       "dotnetRunMessages": true
     },
     "IIS Express": {
