--- a/core/development/Unicorn.Core.Development.ClientHost/appsettings.Development.json
+++ b/core/development/Unicorn.Core.Development.ClientHost/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ServiceDiscoveryServiceUrl": "http://localhost:5081"
 }
