--- a/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
+++ b/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
@@ -1,8 +1,21 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Trace"
     }
+  },
+  "ServiceDiscoveryServiceUrl": "http://localhost:5081",
+  "AuthenticationSettings": {
+    "AuthorityUrl": "https://localhost:44319/",
+    "ClientCredentials": {
+      "ClientId": "console",
+      "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
+      "Scopes": ""
+    }
+  },
+  "ServiceHostConfiguration": {
+    "ClientId": "resource_server_1",
+    "ClientSecret": "846B62D0-DEF9-4215-A99D-86E6B8DAB342"
   }
 }
