--- a/services/Unicorn.GrpcService.SDK/Unicorn.GrpcService.SDK.csproj
+++ b/services/Unicorn.GrpcService.SDK/Unicorn.GrpcService.SDK.csproj
@@ -16,15 +16,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc" Version="1.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Protobuf Include="..\Unicorn.GrpcService\Protos\greet.proto">
-			<Link>Grpc\Protos\greet.proto</Link>
-		</Protobuf>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -36,6 +31,12 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Protobuf Include="..\Unicorn.GrpcService\Protos\greet.proto">
+	    <Link>Grpc\Protos\greet.proto</Link>
+	  </Protobuf>
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
