--- a/core/development/Unicorn.Core.Development.ServiceHost/Unicorn.Core.Development.ServiceHost.csproj
+++ b/core/development/Unicorn.Core.Development.ServiceHost/Unicorn.Core.Development.ServiceHost.csproj
@@ -10,12 +10,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.41.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.42.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\infrastructure\Unicorn.Core.Infrastructure.SDK.HostConfiguration\Unicorn.Core.Infrastructure.SDK.HostConfiguration.csproj" />
     <ProjectReference Include="..\Unicorn.Core.Development.ServiceHost.SDK\Unicorn.Core.Development.ServiceHost.SDK.csproj" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="Protos\MyGrpcService.proto" GrpcServices="Server" />
+	</ItemGroup>
+
+	<ItemGroup>
+    <Folder Include="Protos\" />
   </ItemGroup>
 
 </Project>
