--- a/core/infrastructure/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Grpc.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.41.0" />
+	  <PackageReference Include="Google.Protobuf" Version="3.19.1" />
+	  <!--<PackageReference Include="Grpc.Tools" Version="2.42.0">
+		  --><!--<PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive; compile</IncludeAssets>-->
+	  <!--</PackageReference>-->
   </ItemGroup>
 
 	<ItemGroup>
@@ -15,7 +20,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.32.0.39516">
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.33.0.40503">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
