added logging to Azure AppInsight, added console logger with different text color for logLevels

--- a/core/development/Unicorn.Core.Development.ClientHost/appsettings.Development.json
+++ b/core/development/Unicorn.Core.Development.ClientHost/appsettings.Development.json
@@ -1,5 +1,13 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "a0dac664-8265-468c-852f-5c32ddceecd6"
+  },
   "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Trace"
+      }
+    },
     "LogLevel": {
       "Default": "Trace",
       "Microsoft.AspNetCore": "Trace"
@@ -16,6 +24,6 @@
   },
   "ClientHostConfiguration": {
     "ClientId": "resource_server_1",
-    "ClientSecret":  "846B62D0-DEF9-4215-A99D-86E6B8DAB342"
+    "ClientSecret": "846B62D0-DEF9-4215-A99D-86E6B8DAB342"
   }
 }
