--- a/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
+++ b/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
@@ -1,5 +1,13 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "a0dac664-8265-468c-852f-5c32ddceecd6"
+  },
   "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Trace"
+      }
+    },
     "LogLevel": {
       "Default": "Trace",
       "Microsoft.AspNetCore": "Trace"
