--- a/core/infrastructure/Unicorn.Core.Infrastructure.SDK.HostConfiguration/Unicorn.Core.Infrastructure.SDK.HostConfiguration.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.SDK.HostConfiguration/Unicorn.Core.Infrastructure.SDK.HostConfiguration.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
 		<PackageReference Include="Castle.Core" Version="4.4.1" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.19.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
 		<PackageReference Include="Unicorn.Core.Services.ServiceDiscovery.SDK" Version="1.0.0" />
 		<PackageReference Include="RestSharp" Version="106.13.0" />
