--- a/core/development/Unicorn.Core.Development.ClientHost/appsettings.json
+++ b/core/development/Unicorn.Core.Development.ClientHost/appsettings.json
@@ -1,9 +1,31 @@
 {
+  "ApplicationInsights": ++++++++++++++++++++
+    
+    {
+    "InstrumentationKey": "a0dac664-8265-468c-852f-5c32ddceecd6"
+  },
   "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Trace"
+      }
+    },
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Trace"
     }
   },
-  "AllowedHosts": "*"
+  "ServiceDiscoveryServiceUrl": "http://localhost:5081",
+  "AuthenticationSettings": {
+    "AuthorityUrl": "https://localhost:44319/",
+    "ClientCredentials": {
+      "ClientId": "console",
+      "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
+      "Scopes": ""
+    }
+  },
+  "ClientHostConfiguration": {
+    "ClientId": "resource_server_1",
+    "ClientSecret": "846B62D0-DEF9-4215-A99D-86E6B8DAB342"
+  }
 }
