--- a/core/infrastructure/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Http/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Http.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Http/Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Http.csproj
@@ -17,6 +17,10 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Common\Unicorn.Core.Infrastructure.SDK.ServiceCommunication.Common.csproj" />
+	</ItemGroup>
+
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<CodeAnalysisRuleSet>..\..\..\Unicorn-project.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
