--- a/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
+++ b/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
@@ -13,17 +13,23 @@
       "Microsoft.AspNetCore": "Trace"
     }
   },
-  "ServiceDiscoveryServiceUrl": "http://localhost:5081",
-  "AuthenticationSettings": {
-    "AuthorityUrl": "https://localhost:44319/",
-    "ClientCredentials": {
-      "ClientId": "console",
-      "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
-      "Scopes": ""
-    }
-  },
-  "ServiceHostConfiguration": {
+  "ServiceHostSettings": {
     "ClientId": "resource_server_1",
-    "ClientSecret": "846B62D0-DEF9-4215-A99D-86E6B8DAB342"
+    "ClientSecret": "846B62D0-DEF9-4215-A99D-86E6B8DAB342",
+
+    "ServiceDiscoverySettings": {
+      "Url": "http://localhost:5081"
+    },
+    "OneWayCommunicationSettings": {
+      "ConnectionString": "<INSERT AZURE SERVICE BUS CONNECTION STRING HERE>"
+    },
+    "AuthenticationSettings": {
+      "AuthorityUrl": "https://localhost:44319/",
+      "ClientCredentials": {
+        "ClientId": "console",
+        "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
+        "Scopes": ""
+      }
+    }
   }
 }
