--- a/core/development/Unicorn.Core.Development.ClientHost/Unicorn.Core.Development.ClientHost.csproj
+++ b/core/development/Unicorn.Core.Development.ClientHost/Unicorn.Core.Development.ClientHost.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="FluentValidation" Version="10.3.6" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.6" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+		<PackageReference Include="OneOf" Version="3.0.205" />
 	</ItemGroup>
 
 	<ItemGroup>
