--- a/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
@@ -7,8 +7,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Identity" Version="1.5.0" />
 		<PackageReference Include="FluentValidation" Version="10.3.6" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.6" />
+		<PackageReference Include="MassTransit.AspNetCore" Version="7.3.0" />
+		<PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="7.3.0" />
+		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.0" />
 		<PackageReference Include="MediatR" Version="10.0.0" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
@@ -39,6 +43,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Unicorn.Core.Infrastructure.Communication.Grpc.SDK\Unicorn.Core.Infrastructure.Communication.Grpc.SDK.csproj" />
 		<ProjectReference Include="..\Unicorn.Core.Infrastructure.Communication.Http.SDK\Unicorn.Core.Infrastructure.Communication.Http.SDK.csproj" />
+		<ProjectReference Include="..\Unicorn.Core.Infrastructure.Communication.MessageBroker\Unicorn.Core.Infrastructure.Communication.MessageBroker.csproj" />
 		<ProjectReference Include="..\Unicorn.Core.Infrastructure.Security.IAM\Unicorn.Core.Infrastructure.Security.IAM.csproj" />
 	</ItemGroup>
 
