--- a/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
+++ b/core/development/Unicorn.Core.Development.ServiceHost/appsettings.Development.json
@@ -21,7 +21,8 @@
       "Url": "http://localhost:5081"
     },
     "OneWayCommunicationSettings": {
-      "ConnectionString": "<INSERT AZURE SERVICE BUS CONNECTION STRING HERE>"
+      "ConnectionString": "<INSERT AZURE SERVICE BUS CONNECTION STRING HERE>",
+      "SubscriptionId": "dd133eee-0ac8-46b6-95e7-467026e04cae"
     },
     "AuthenticationSettings": {
       "AuthorityUrl": "https://localhost:44319/",
