--- a/core/development/Unicorn.Core.Development.ClientHost/Unicorn.Core.Development.ClientHost.csproj
+++ b/core/development/Unicorn.Core.Development.ClientHost/Unicorn.Core.Development.ClientHost.csproj
@@ -6,6 +6,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>57b5730d-cd2e-4cb0-be94-105d898a495d</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
