--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,6 @@
 /core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/obj
 /core/infrastructure/Unicorn.Core.Infrastructure.Communication.MessageBroker/bin/Debug/net6.0
 /core/infrastructure/Unicorn.Core.Infrastructure.Communication.MessageBroker/obj
+/obj/Docker
+/bin/Debug
+/obj/Debug
