--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,13 +1,29 @@
 version: '3.4'
 
 services:
-  unicorn.core.development.clienthost:
+  cartdb:
+    container_name: cartdb
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin1234
+      - POSTGRES_DB=CartDb
+    restart: always
+    ports:
+        - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+
+  unicorn.eshop.cartservice:
+    container_name: unicorn.eshop.cartservice
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
+      - CartHostSettings__DbConnectionString=Server=cartdb;Port=5432;Database=CartDb;User Id=admin;Password=admin1234;
+    depends_on:
+      - cartdb
     ports:
-      - "80"
-      - "443"
+      - "8000:80"
+      - "8001:443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
