added support for RabbitMQ message broker, added seed data worker for CartService

--- a/core/services/authentication/Unicorn.Core.Services.Authentication.OpenIddict/Unicorn.Core.Services.Authentication.OpenIddict.csproj
+++ b/core/services/authentication/Unicorn.Core.Services.Authentication.OpenIddict/Unicorn.Core.Services.Authentication.OpenIddict.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <UserSecretsId>66a97453-73bb-4d80-a745-dd59dfa498a3</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="OpenIddict.Quartz" Version="3.1.1" />
