--- a/core/development/Unicorn.Core.Development.ClientHost/appsettings.Development.json
+++ b/core/development/Unicorn.Core.Development.ClientHost/appsettings.Development.json
@@ -18,7 +18,7 @@
       "Url": "http://localhost:5081"
     },
     "OneWayCommunicationSettings": {
-      "ConnectionString": "<INSERT AZURE SERVICE BUS CONNECTION STRING HERE>",
+      "ConnectionString": "amqp://guest:guest@localhost:5672",
       "SubscriptionId": "6f5b8662-f95c-4951-ba4a-bf9ab94f7b7a"
     },
     "AuthenticationSettings": {
