--- a/core/infrastructure/Unicorn.Core.Infrastructure.Communication.MessageBroker/Unicorn.Core.Infrastructure.Communication.MessageBroker.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.Communication.MessageBroker/Unicorn.Core.Infrastructure.Communication.MessageBroker.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="MassTransit.AspNetCore" Version="7.3.0" />
 		<PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="7.3.0" />
